$Id$
$Name$

Version 1.0pre6 (20030126)

Bug fixes:
 - Fix problem with afio volume headers and null-terminated file lists.
     The first file in afio archives was being missed (actually showed up
     in the label instead of the archive)

Cleanup:
 - "-rmfile" yells if no argument
 - Move shell/remote/buffer check to its own function after option
     checking.  (So commandline/config errors and these pre-tests are
     displayed separately)

----------------------------------------------------------------------
Version 1.0pre5 (20030124)

Bug fixes:
  - Fix sh status collector for the front of remote commands
  - Fix it for commands in ( .. ) subshells also (echo + find for afio
      volume header input for example)

Cleanup:
  - Don't do status collection work for non-pipelined remote commands

----------------------------------------------------------------------
Version 1.0pre4 (20030121)

Bug Fixes:
  - Try harder to catch pipeline errors in different environments:
      o zsh has a pipestatus array variable similar to bash, use it
      o Tweaks to shell detection to detect remote vanilla csh
      o Add exit-status recording shell trick for local sh
  - If we get an error, rm index & botched archive file if using files
  - If we get an error, mark problem in the index if using tapes

Cleanup:
  - Replaced manual line-wrapper with Text::Wrap (other was buggy, missed
     single-char "words")

----------------------------------------------------------------------
Version 1.0pre3 (20030119)

Bug Fixes:
  - Fix PIPESTATUS trick to not require extra 'seq' utility, just a while loop
  - Using "-toc" gave uninitialized var warning, obvious problem, fixed.
      Eradicated some other spots of code that used $_ too.
  - "-rmindex" yells if you don't give an argument

Cleanup:
  - Cosmetic - fix missing line in output if no remote and buffer=false
  - Remove duplicated index delete code

----------------------------------------------------------------------