@@ -16,12 +16,13 @@ machines, amanda is "too much", and tarring things up
 by hand isn't nearly enough...
 
 <P>
-<B>Version 1.0pre6</B> (going to call this 1.0 soon if no major problems pop
-up - development of queued-up stuff can go on afterwards)
+<B>Version 1.0pre6</B> (going to call this 1.0 soon if no major problems
+pop up)
 <UL>
-<LI><A HREF="tarball/flexbackup-1.0pre6.tar.gz">flexbackup-1.0pre6.tar.gz</A>  (Jan 26 2003)
-<LI><A HREF="RPMS/flexbackup-1.0pre6-1.src.rpm">flexbackup-1.0pre6-1.src.rpm</A>
-<LI><A HREF="RPMS/flexbackup-1.0pre6-1.noarch.rpm">flexbackup-1.0pre6-1.noarch.rpm</A>
+<LI>Tar+gz: <A HREF="tarball/flexbackup-1.0pre6.tar.gz">flexbackup-1.0pre6.tar.gz</A>  (Jan 26 2003)
+<LI>Source RPM:<A HREF="RPMS/flexbackup-1.0pre6-1.src.rpm">flexbackup-1.0pre6-1.src.rpm</A>
+<LI>RedHat 8.x RPM: <A HREF="RPMS/flexbackup-1.0pre6-1.noarch.rpm">flexbackup-1.0pre6-1.noarch.rpm</A>
+<!-- <LI>FreeBSD package: <A HREF="FreeBSD/flexbackup-1.0pre6-1.noarch.rpm">flexbackup-1.0pre6-1.noarch.rpm</A> -->
 </UL>
 
 <B>Links & Info:</B>
@@ -32,11 +33,11 @@ up - development of queued-up stuff can go on afterwards)
   <LI>The <A HREF="TODO">TODO</A> and feature idea list
   <LI>Running list of <A HREF="CHANGES">CHANGES</A>
   <LI>An attempt at starting a <A HREF="faq.html">FAQ</A>
-  <LI>Mailing lists (that we might actually start using!)
+  <LI>Mailing lists:
     <UL>
       <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-help">flexbackup-help</A> - usage & questions
       <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-announce">flexbackup-announce</A> - release announcements
-      <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-devel">flexbackup-devel</A> - development discussion
+      <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-devel">flexbackup-devel</A> (not being used yet)
     </UL>
   <LI>Sourceforge <A HREF="http://sourceforge.net/projects/flexbackup">project page</A>
   <LI><A HREF="http://flexbackup.sourceforge.net/">main site</A> at sourceforge,
@@ -78,6 +79,6 @@ align="right" width="125" height="37" border="0" alt="SourceForge.net">
 
 <ADDRESS><A HREF="mailto:flexbackup-help@lists.sourceforge.net">flexbackup-help at lists dot sourceforge dot net</A></ADDRESS>
 <!-- hhmts start -->
-Last modified: Sun Jan 26 16:14:41 MST 2003
+Last modified: Sun Jan 26 21:05:01 MST 2003
 <!-- hhmts end -->
 </BODY> </HTML>
